# CPLAP_with_BEEF

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cplap_with_beef/: CPLAP_Helper.py  Data_Analyzer.py  Debug.py  Generate_Final_Values.py  Organizer.py  Process_BEEF_Entry.py  QE_Helper.py  Utility.py
tests/: test_cplap.ipynb
tests/chemical_potential_info/: .file_paths.txt
tests/chemical_potential_info/grid_exact/: beef_0_exact.csv  beef_1000_exact.csv  beef_1001_exact.csv  beef_1002_exact.csv  beef_1003_exact.csv  beef_1004_exact.csv  beef_1005_exact.csv  beef_1006_exact.csv  beef_1007_exact.csv  beef_1008_exact.csv  beef_1009_exact.csv  beef_100_exact.csv  beef_1010_exact.csv  beef_1011_exact.csv  beef_1012_exact.csv  beef_1013_exact.csv  beef_1014_exact.csv  beef_1015_exact.csv  beef_1016_exact.csv  beef_1017_exact.csv  beef_1018_exact.csv  beef_1019_exact.csv  beef_101_exact.csv  beef_1020_exact.csv  beef_1021_exact.csv  beef_1022_exact.csv  beef_1023_exact.csv  beef_1024_exact.csv  beef_1025_exact.csv  beef_1026_exact.csv  beef_1027_exact.csv  beef_1028_exact.csv  beef_1029_exact.csv  beef_102_exact.csv  beef_1030_exact.csv  beef_1031_exact.csv  beef_1032_exact.csv  beef_1033_exact.csv  beef_1034_exact.csv  beef_1035_exact.csv  (+1951 more)
tests/chemical_potential_info/grid_total/: beef_0_grid_total.csv  beef_1000_grid_total.csv  beef_1001_grid_total.csv  beef_1002_grid_total.csv  (+1986 more)
tests/useful_test_files/: Ba2SnO4_espresso.pwo  BaO_espresso.pwo  BaSnO3_espresso.pwo  Ba_espresso.pwo  O_espresso.pwo  SnO2_espresso.pwo  SnO_espresso.pwo  Sn_espresso.pwo
