[project]
name = "cplap_with_beef"
version = "1.0"
authors = [
  { name="Andrew Timmins", email="atimmins@andrew.cmu.edy" },
]
description = "A framework for generating chemical potential uncertainties with CPLAP."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]